fix layout bug on product list page; adding sufficient href to hero section button; giving queries to store overview

--- a/modules/users/css/style.css
+++ b/modules/users/css/style.css
@@ -1872,6 +1872,8 @@
 
 .lap-item-img img {
   width: 100%;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
 }
 .lap-item-name {
   margin: 12px 8px;
